syntax = "proto3";
package pb;
option java_multiple_files = true;
option java_package = "com.demo.grpc.rangechunker";
option java_outer_classname = "FileRangeChunker";

service RangeChunker {
  rpc Range(RangeRequest) returns (RangeChunkResponse) {}
}

message RangeRequest {
  string fileName = 1;
  int64 position = 2;
}

message RangeChunkResponse {
  bytes chunk = 1;
  int32 code = 2;
  int64 nextposition = 3;
}

